# power-analysis

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/tibber_power/: __init__.py  api.py  battery_correction.py  cli.py  config.py  plotting.py  resample.py  websocket.py
